--- a/voiceraFace/Info.plist
+++ b/voiceraFace/Info.plist
@@ -21,5 +21,9 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs access to the camera to capture video and overlay AR effects.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app requires access to the microphone to record audio during video recordings.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs access to your photo library to save recorded videos.</string>
 </dict>
 </plist>
