--- a/voiceraFace/Info.plist
+++ b/voiceraFace/Info.plist
@@ -25,5 +25,7 @@
 	<string>This app requires access to the microphone to record audio during video recordings.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>This app needs access to your photo library to save recorded videos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to your photo library to save recorded videos.</string>
 </dict>
 </plist>
